# MetalTranslate

./: CMakeLists.txt  LICENSE  build.sh
src/: MetalTranslate.cpp  MetalTranslate.h  main.cpp
